# -HW-pytest-PO

./: .env  .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  EXAMPLES.md  FILE_LISTING.md  INDEX.md  PROJECT_STATUS.py  QUICKSTART.md  README.md  conftest.py  pytest.ini  requirements.txt  setup.cfg  verify_config.py
src/components/: __init__.py  base_component.py  event_card.py  filter_panel.py  header.py
src/pages/: __init__.py  base_page.py  events_page.py
tests/: test_events_page.py
