[metadata]
name = greencity-tests
version = 1.0.0
description = Test Automation Framework for GreenCity website using POM + Components
author = QA Team
author_email = qa@example.com
url = https://github.com/example/greencity-tests
license = MIT

[options]
python_requires = >=3.8

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 88
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist
ignore = E203, W503
